poke/testsuite/poke.pkl/struct-method-diag-1.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    method foo = int: { return 10; }
    int i : i !=
      foo; /* { dg-error "method" } */
  };
